@@ -2,6 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 20?? PHP 5.4.36
 
+- Core:
+  . Upgraded crypt_blowfish to version 1.3. (Leigh)
+
 13 Nov 2014 PHP 5.4.35
 
 - Core:
